--- a/package.json
+++ b/package.json
@@ -29,7 +29,9 @@
     "prettier": "^3.2.5",
     "prettier-plugin-organize-imports": "^3.2.4",
     "prettier-plugin-tailwindcss": "^0.6.0",
+    "ts-node": "^10.9.2",
     "tsconfig": "workspace:*",
+    "tsconfig-paths": "^4.2.0",
     "tsx": "^4.19.3",
     "turbo": "^1.12.5"
   },
