--- a/packages/prisma/package.json
+++ b/packages/prisma/package.json
@@ -16,7 +16,10 @@
   "dependencies": {
     "@planetscale/database": "^1.18.0",
     "@prisma/adapter-planetscale": "^5.18.0",
-    "@prisma/client": "5.18.0"
+    "@prisma/client": "5.18.0",
+    "bcryptjs": "^3.0.2",
+    "lru-cache": "^11.1.0",
+    "twilio": "^5.6.0"
   },
   "devDependencies": {
     "@types/node": "18.11.9",
