--- a/apps/web/package.json
+++ b/apps/web/package.json
@@ -83,6 +83,7 @@
     "json-2-csv": "^5.5.0",
     "jszip": "^3.10.1",
     "linkify-react": "^4.1.3",
+    "lru-cache": "^11.1.0",
     "lucide-react": "^0.462.0",
     "luxon": "^3.5.0",
     "nanoid": "^5.0.1",
@@ -118,6 +119,7 @@
     "stripe": "^12.12.0",
     "swr": "^2.1.5",
     "topojson-client": "^3.1.0",
+    "twilio": "^5.6.0",
     "unique-names-generator": "^4.7.1",
     "unsplash-js": "^7.0.18",
     "use-debounce": "^10.0.4",
